{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 58,
  "lineage": "e6cc54b7-7347-e96e-c65a-a88d18854c8d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "k8s-staticip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.246.161.129",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-10-08T04:27:31.895-07:00",
            "id": "otus-k8s-storage/europe-west3/k8s-staticip",
            "name": "k8s-staticip",
            "network_tier": "PREMIUM",
            "project": "otus-k8s-storage",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/addresses/k8s-staticip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "iscsi-firewall",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2019-10-08T04:27:48.470-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "iscsi-firewall",
            "name": "iscsi-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-iscsi-network",
            "priority": 1000,
            "project": "otus-k8s-storage",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/firewalls/iscsi-firewall",
            "source_ranges": [
              "192.168.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.k8s-iscsi-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s-externalfirewall",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-10-08T04:27:48.482-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "k8s-externalfirewall",
            "name": "k8s-externalfirewall",
            "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-network",
            "priority": 1000,
            "project": "otus-k8s-storage",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/firewalls/k8s-externalfirewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.k8s-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s-internalfirewall",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2019-10-08T04:27:48.558-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "k8s-internalfirewall",
            "name": "k8s-internalfirewall",
            "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-network",
            "priority": 1000,
            "project": "otus-k8s-storage",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/firewalls/k8s-internalfirewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.k8s-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "k8s_lbfirewall",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-10-08T04:27:48.593-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "k8s-lbfirewall",
            "name": "k8s-lbfirewall",
            "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-network",
            "priority": 1000,
            "project": "otus-k8s-storage",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/firewalls/k8s-lbfirewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.k8s-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "k8s-lbforwarding",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "creation_timestamp": "2019-10-08T04:28:31.257-07:00",
            "id": "k8s-lbforwarding",
            "ip_address": "35.246.161.129",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "k8s-lbforwarding",
            "network_tier": "PREMIUM",
            "port_range": "6443-6443",
            "project": "otus-k8s-storage",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/forwardingRules/k8s-lbforwarding",
            "target": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/targetPools/k8s-lbtartgetpool"
          },
          "depends_on": [
            "google_compute_address.k8s-staticip",
            "google_compute_target_pool.k8s-lbtartgetpool"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "iscsi-target",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/zones/europe-west3-a/disks/iscsi-target-disk"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20191002",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/zones/europe-west3-a/disks/iscsi-target"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "id": "iscsi-target",
            "instance_id": "702983022096534590",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "UxDRPinLdis=",
            "name": "iscsi-target",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.242.241.247",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-network",
                "network_ip": "10.0.0.100",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/subnetworks/k8s-subnet",
                "subnetwork_project": "otus-k8s-storage"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-iscsi-network",
                "network_ip": "192.168.0.100",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/subnetworks/k8s-iscsi-subnet",
                "subnetwork_project": "otus-k8s-storage"
              }
            ],
            "project": "otus-k8s-storage",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/zones/europe-west3-a/instances/iscsi-target",
            "service_account": [
              {
                "email": "593615330597-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "tags": [
              "iscsi-target"
            ],
            "tags_fingerprint": "2XugNnx9g-M=",
            "zone": "europe-west3-a"
          },
          "depends_on": [
            "google_compute_disk.iscsi-target-disk",
            "google_compute_subnetwork.k8s-iscsi-subnet",
            "google_compute_subnetwork.k8s-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s-controller",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20191002",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/zones/europe-west3-a/disks/controller-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "id": "controller-0",
            "instance_id": "2870803619415968831",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "UxDRPinLdis=",
            "name": "controller-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.243.140",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-network",
                "network_ip": "10.0.0.10",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/subnetworks/k8s-subnet",
                "subnetwork_project": "otus-k8s-storage"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-iscsi-network",
                "network_ip": "192.168.0.10",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/subnetworks/k8s-iscsi-subnet",
                "subnetwork_project": "otus-k8s-storage"
              }
            ],
            "project": "otus-k8s-storage",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/zones/europe-west3-a/instances/controller-0",
            "service_account": [
              {
                "email": "593615330597-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "tags": [
              "controller"
            ],
            "tags_fingerprint": "e2aTiSrlOyM=",
            "zone": "europe-west3-a"
          },
          "depends_on": [
            "google_compute_subnetwork.k8s-iscsi-subnet",
            "google_compute_subnetwork.k8s-subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20191002",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/zones/europe-west3-a/disks/controller-1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "id": "controller-1",
            "instance_id": "8057674368248040510",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "UxDRPinLdis=",
            "name": "controller-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.156.169",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-network",
                "network_ip": "10.0.0.11",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/subnetworks/k8s-subnet",
                "subnetwork_project": "otus-k8s-storage"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-iscsi-network",
                "network_ip": "192.168.0.11",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/subnetworks/k8s-iscsi-subnet",
                "subnetwork_project": "otus-k8s-storage"
              }
            ],
            "project": "otus-k8s-storage",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/zones/europe-west3-a/instances/controller-1",
            "service_account": [
              {
                "email": "593615330597-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "tags": [
              "controller"
            ],
            "tags_fingerprint": "e2aTiSrlOyM=",
            "zone": "europe-west3-a"
          },
          "depends_on": [
            "google_compute_subnetwork.k8s-iscsi-subnet",
            "google_compute_subnetwork.k8s-subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20191002",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/zones/europe-west3-a/disks/controller-2"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "id": "controller-2",
            "instance_id": "4055039855132003390",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "UxDRPinLdis=",
            "name": "controller-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.215.160",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-network",
                "network_ip": "10.0.0.12",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/subnetworks/k8s-subnet",
                "subnetwork_project": "otus-k8s-storage"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-iscsi-network",
                "network_ip": "192.168.0.12",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/subnetworks/k8s-iscsi-subnet",
                "subnetwork_project": "otus-k8s-storage"
              }
            ],
            "project": "otus-k8s-storage",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/zones/europe-west3-a/instances/controller-2",
            "service_account": [
              {
                "email": "593615330597-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "tags": [
              "controller"
            ],
            "tags_fingerprint": "e2aTiSrlOyM=",
            "zone": "europe-west3-a"
          },
          "depends_on": [
            "google_compute_subnetwork.k8s-iscsi-subnet",
            "google_compute_subnetwork.k8s-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s-worker",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20191002",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/zones/europe-west3-a/disks/worker-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "id": "worker-0",
            "instance_id": "4046301138577902655",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "UxDRPinLdis=",
            "name": "worker-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.136.129",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-network",
                "network_ip": "10.0.0.20",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/subnetworks/k8s-subnet",
                "subnetwork_project": "otus-k8s-storage"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-iscsi-network",
                "network_ip": "192.168.0.20",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/subnetworks/k8s-iscsi-subnet",
                "subnetwork_project": "otus-k8s-storage"
              }
            ],
            "project": "otus-k8s-storage",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/zones/europe-west3-a/instances/worker-0",
            "service_account": [
              {
                "email": "593615330597-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "zone": "europe-west3-a"
          },
          "depends_on": [
            "google_compute_subnetwork.k8s-iscsi-subnet",
            "google_compute_subnetwork.k8s-subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20191002",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/zones/europe-west3-a/disks/worker-1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "id": "worker-1",
            "instance_id": "252214762588458046",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "UxDRPinLdis=",
            "name": "worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.169.229",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-network",
                "network_ip": "10.0.0.21",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/subnetworks/k8s-subnet",
                "subnetwork_project": "otus-k8s-storage"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-iscsi-network",
                "network_ip": "192.168.0.21",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/subnetworks/k8s-iscsi-subnet",
                "subnetwork_project": "otus-k8s-storage"
              }
            ],
            "project": "otus-k8s-storage",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/zones/europe-west3-a/instances/worker-1",
            "service_account": [
              {
                "email": "593615330597-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "tags": [
              "worker"
            ],
            "tags_fingerprint": "uvqiNQvnefU=",
            "zone": "europe-west3-a"
          },
          "depends_on": [
            "google_compute_subnetwork.k8s-iscsi-subnet",
            "google_compute_subnetwork.k8s-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "k8s-iscsi-network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "k8s-iscsi-network",
            "name": "k8s-iscsi-network",
            "project": "otus-k8s-storage",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-iscsi-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "k8s-network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "k8s-network",
            "name": "k8s-network",
            "project": "otus-k8s-storage",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "k8s-iscsi-subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-10-08T04:27:48.603-07:00",
            "enable_flow_logs": false,
            "fingerprint": "2N2aEVpPkDw=",
            "gateway_address": "192.168.0.1",
            "id": "europe-west3/k8s-iscsi-subnet",
            "ip_cidr_range": "192.168.0.0/24",
            "name": "k8s-iscsi-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-iscsi-network",
            "private_ip_google_access": false,
            "project": "otus-k8s-storage",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/subnetworks/k8s-iscsi-subnet"
          },
          "depends_on": [
            "google_compute_network.k8s-iscsi-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "k8s-subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-10-08T04:27:48.609-07:00",
            "enable_flow_logs": false,
            "fingerprint": "glDbDtPray4=",
            "gateway_address": "10.0.0.1",
            "id": "europe-west3/k8s-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "k8s-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/global/networks/k8s-network",
            "private_ip_google_access": false,
            "project": "otus-k8s-storage",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/otus-k8s-storage/regions/europe-west3/subnetworks/k8s-subnet"
          },
          "depends_on": [
            "google_compute_network.k8s-network"
          ]
        }
      ]
    }
  ]
}